--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </figure>
                 <div class="datos">
                     <h1 class="nombre">Nicolás Chávez Gómez</h1>
-                    <h3>Portafolio de desarrollo web</h3>
+                    <h3>Web development portfolio</h3>
                 </div>
             </div>
         </section>
@@ -29,33 +29,60 @@
         <section class="proyectos">
             <div class="container">
 
-                <a href="https://nicochgz.github.io/presupuesto-app/" target="_blank" class="proyecto-container">
-                    <h2>Aplicación de presupuesto</h2>                    
-                </a>
                 <a href="https://nicochgz.github.io/landing-page-1/" target="_blank" class="proyecto-container">
                     <h2>Landing page 1</h2>                    
-                </a>
-                <a href="https://nicochgz.github.io/clock/" target="_blank" class="proyecto-container">
-                    <h2>Reloj (2 tipos)</h2>                    
-                </a>
-                <a href="https://nicochgz.github.io/calculadora-basica/" target="_blank" class="proyecto-container">
-                    <h2>Calculadora básica</h2>                    
                 </a>
                 <a href="https://nicochgz.github.io/landing-page-4/" target="_blank" class="proyecto-container">
                     <h2>Landing page 2</h2>                    
                 </a>
-                <a href="https://nicochgz.github.io/qrgenerator/" target="_blank" class="proyecto-container">
-                    <h2>Generador de códigos QR</h2>                    
-                </a>
                 <a href="https://nicochgz.github.io/landing-page-3/" target="_blank" class="proyecto-container">
                     <h2>Landing page 3</h2>                    
-                </a>
-                <a href="https://nicochgz.github.io/listado-personas/" target="_blank" class="proyecto-container">
-                    <h2>Listado de personas</h2>                    
                 </a>
                 <a href="https://nicochgz.github.io/landing-page-2/" target="_blank" class="proyecto-container">
                     <h2>Landing page 4</h2>                    
                 </a>
+                <a href="https://nicochgz.github.io/listado-personas/" target="_blank" class="proyecto-container">
+                    <h2>People list</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/calculadora-basica/" target="_blank" class="proyecto-container">
+                    <h2>Basic calculator</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/clock/" target="_blank" class="proyecto-container">
+                    <h2>Clock (2 types)</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/qrgenerator/" target="_blank" class="proyecto-container">
+                    <h2>QR generator</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/presupuesto-app/" target="_blank" class="proyecto-container">
+                    <h2>Budget app</h2>                    
+                </a>
+ 
+                <div class="info">
+                    <div class="container">
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <div class="datos">
+                            <h3>- React Apps -</h3>
+                        </div>
+                    </div>
+                </div>
+                
+                <a href="https://nicochgz.github.io/contador-clics-react/" target="_blank" class="proyecto-container">
+                    <h2>Click counter</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/calculadora-react/" target="_blank" class="proyecto-container">
+                    <h2>Calculator</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/lista-tareas-react/" target="_blank" class="proyecto-container">
+                    <h2>Task list</h2>                    
+                </a>
+                <a href="https://nicochgz.github.io/freecodecamp-clone/" target="_blank" class="proyecto-container">
+                    <h2>freeCodeCamp clone</h2>                    
+                </a>
+
+
+
                 <div class="redes">
                     <a href="https://www.linkedin.com/in/nicolas-chavez-b69493234/" target="_blank">
                         <ion-icon class="icon" name="logo-linkedin"></ion-icon>
